syntax = "proto3";

package auth_service;

import "google/protobuf/empty.proto";

message User {
  string user_id = 1;
  string user_email = 2;
  string user_password = 3;
  string user_f_name = 4;
  string user_l_name = 5;
  string user_gender = 6;
  string user_photo = 7;
  string user_balance = 8;
  string user_level = 9;
  string user_status = 10;
}

message Level {
  string level_id = 1;
  string level_name = 2;
  string level_status = 3;
}

message UserList {
  repeated User list = 1;
}

message LevelList {
  repeated Level list = 1;
}

message ID {
  string id = 1;
}

message Email {
  string email = 1;
}

message UserUpdateRequest {
  ID id = 1;
  User user = 2;
}

message LevelUpdateRequest {
  ID id = 1;
  Level level = 2;
}

message LoginCredentials {
  string user_email = 1;
  string user_password = 2;
}

message Token {
  string token = 1;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

service UserCRUD {
  rpc GetAll(google.protobuf.Empty) returns (UserList);
  rpc GetByID(ID) returns (User);
  rpc GetByEmail(Email) returns (User);
  rpc Create(User) returns (User);
  rpc Update(UserUpdateRequest) returns (User);
  rpc Delete(ID) returns (google.protobuf.Empty);
}

service LevelCRUD {
  rpc GetAll(google.protobuf.Empty) returns (LevelList);
  rpc GetByID(ID) returns (Level);
  rpc Create(Level) returns (Level);
  rpc Update(LevelUpdateRequest) returns (Level);
  rpc Delete(ID) returns (google.protobuf.Empty);
}

service JWTToken {
  rpc GenerateToken(LoginCredentials) returns (Token);
}